--- a/README
+++ b/README
@@ -2,6 +2,7 @@ Ultime Spica Recovery
 Based on ClockworkMod Recovery 2.5.1.0
 
 Features:
+- Format as RFS, EXT2, EXT4
 - Full Terminal Emulator
 - IMAGE Backup for DATA SYSTEM and SDEXT
 - Password protection
